force-app/main/default/objects/Lead/fields/Appointment_Completed__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment Confirmed</label>
    <type>Checkbox</type>
</CustomField>