force-app/main/default/objects/Lead/fields/Appointment_Confirmation_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Confirmation_Type__c</fullName>
    <label>Appointment Confirmation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>