force-app/main/default/objects/Lead/fields/Appointment_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Rejection_Reason__c</fullName>
    <label>Appointment Rejection Reason</label>
    <type>TextArea</type>
</CustomField>