force-app/main/default/objects/Lead/fields/Appointment_Rescheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Rescheduled_Time__c</fullName>
    <label>Appointment Rescheduled Date</label>
    <type>Date</type>
</CustomField>