force-app/main/default/objects/Lead/fields/Appointment_Sent_date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Sent_date__c</fullName>
    <label>Appointment Sent date</label>
    <type>Date</type>
</CustomField>