force-app/main/default/objects/Lead/fields/Customer_Budget__c.field-meta.xml
<CustomField>
    <fullName>Customer_Budget__c</fullName>
    <label>Customer Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>