force-app/main/default/objects/Lead/fields/Estimated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Start_Date__c</fullName>
    <description>Estimated Start Date of project</description>
    <inlineHelpText>Estimated Start Date of project</inlineHelpText>
    <label>Estimated Start Date</label>
    <type>Date</type>
</CustomField>