force-app/main/default/objects/Lead/fields/Interior_Category__c.field-meta.xml
<CustomField>
    <fullName>Interior_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interior Category</label>
    <referenceTo>Interior_Category__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>