force-app/main/default/objects/Lead/fields/Interior_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Interior_Project_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interior Project Type</label>
    <referenceTo>Interior_Project_Type__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>