force-app/main/default/objects/Lead/fields/Project_End_Date_by_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Project_End_Date_by_Supervisor__c</fullName>
    <label>Project End Date by Supervisor</label>
    <type>Date</type>
</CustomField>