force-app/main/default/objects/Lead/fields/Project_Estimated_Completion_Months__c.field-meta.xml
<CustomField>
    <fullName>Project_Estimated_Completion_Months__c</fullName>
    <label>Project Estimated Completion Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>4 Months</fullName>
            </value>
            <value>
                <fullName>5 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>7 Months</fullName>
            </value>
            <value>
                <fullName>8 Months</fullName>
            </value>
            <value>
                <fullName>9 Months</fullName>
            </value>
            <value>
                <fullName>10 Months</fullName>
            </value>
            <value>
                <fullName>11 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>1 Year 1 Month</fullName>
            </value>
            <value>
                <fullName>1 Year 2 Months</fullName>
            </value>
            <value>
                <fullName>1 Year 3 Months</fullName>
            </value>
            <value>
                <fullName>1 Year 4 Months</fullName>
            </value>
            <value>
                <fullName>1 Year 5 Months</fullName>
            </value>
            <value>
                <fullName>1 Year 6 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>