force-app/main/default/objects/Lead/fields/Project_Request_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Project_Request_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Request Submitted</label>
    <type>Checkbox</type>
</CustomField>