force-app/main/default/objects/Lead/fields/Project_Scope__c.field-meta.xml
<CustomField>
    <fullName>Project_Scope__c</fullName>
    <label>Project Scope</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_Of_Project__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Home Interiors</fullName>
            </value>
            <value>
                <fullName>Home Decor</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Bed Room</fullName>
            </value>
            <value>
                <fullName>Hall Interior</fullName>
            </value>
            <value>
                <fullName>Conference Hall</fullName>
            </value>
            <value>
                <fullName>Fully Office Interiors</fullName>
            </value>
            <value>
                <fullName>Office Decor</fullName>
            </value>
            <value>
                <fullName>Office Space</fullName>
            </value>
            <value>
                <fullName>Dining Hall</fullName>
            </value>
            <value>
                <fullName>Cabins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>