force-app/main/default/objects/Lead/fields/Rejection_Description__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Description__c</fullName>
    <description>Reason for rejection if the lead is being rejected</description>
    <inlineHelpText>Please provide description for rejection of the lead if the approval status is rejected.</inlineHelpText>
    <label>Rejection Description</label>
    <type>TextArea</type>
</CustomField>