force-app/main/default/objects/Lead/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Approval_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Longer Needed</fullName>
            </value>
            <value>
                <fullName>Budget Issues, Cannot Process further</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t met the requirements, Cannot Process further</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t met the requirements,  Can be useful in the future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>