force-app/main/default/objects/Lead/fields/Site_Space__c.field-meta.xml
<CustomField>
    <fullName>Site_Space__c</fullName>
    <inlineHelpText>It will display the site space in Sq.Ft.</inlineHelpText>
    <label>Site Space</label>
    <length>200</length>
    <type>Text</type>
</CustomField>