force-app/main/default/objects/Lead/fields/Supervisor_Estimated_Budget__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Estimated_Budget__c</fullName>
    <label>Project Final Approval Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>