force-app/main/default/objects/Lead/fields/Supervisor_User__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>