force-app/main/default/objects/Lead/listViews/Arelia_Customers_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Arelia_Customers_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Supervisor_User__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Queue</filterScope>
    <label>Arelia_Customers_Queue</label>
    <queue>Arelia_Customers_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>